spelling error corrected lol

--- a/home.html
+++ b/home.html
@@ -338,7 +338,7 @@
                     <p>
                       IF you would like to talk more about my experience in web
                       design, or if you would like to talk about potential
-                      emplyment, then please feel free to reach out!
+                      employment, then please feel free to reach out!
                     </p>
                     E-mail:
                     <a href="mailto:patrickfinnigan94@gmail.com"
