--- a/home.html
+++ b/home.html
@@ -162,7 +162,12 @@
                 <!-- Accordion end -->
               </div>
               <div class="col-md-5">
-                <p><img src="assets/images/index/20180825_023236549_iOS.jpg" alt="" /></p>
+                <p>
+                  <img
+                    src="assets/images/index/20180825_023236549_iOS.jpg"
+                    alt=""
+                  />
+                </p>
                 <p>
                   Patrick was born and raised in Fairfield, CA, and acquired a
                   BA in Psychology in 2016. Currently he is pursuing a career in
@@ -321,6 +326,22 @@
                   href="https://young-river-49658.herokuapp.com/"
                 ></a>
               </div>
+              <div class="portfolio-item branding web undefined">
+                <div class="portfolio-wrapper">
+                  <img src="assets/images/index/demoquest.png" alt="" />
+                  <div class="portfolio-overlay"></div>
+                </div>
+                <div class="portfolio-caption">
+                  <h5 class="portfolio-title">DemoQuest</h5>
+                  <div class="portfolio-subtitle font-serif">
+                    A Fullstack text adventure game
+                  </div>
+                </div>
+                <a
+                  class="portfolio-link"
+                  href="https://demoquest.herokuapp.com/"
+                ></a>
+              </div>
             </div>
           </div>
         </section>
@@ -382,8 +403,6 @@
       <!-- Wrapper end -->
     </div>
     <!-- Layout end -->
-
-   
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
