--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <meta name="author" content="" />
     <title>Patrick's Portfolio</title>
     <!-- Favicons -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" href="assets/images/tab-icon.png" />
     <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png" />
     <link
       rel="apple-touch-icon"
@@ -47,7 +47,7 @@
             <div class="row">
               <div class="col-md-12">
                 <h1 class="h1 m-b-15">Patrick Finnigan</h1>
-                <p class="m-b-30">Junior Web Designer</p>
+                <p class="m-b-30">Junior Web Developer</p>
               </div>
             </div>
           </div>
