--- a/home.html
+++ b/home.html
@@ -206,7 +206,7 @@
                 <div class="portfolio-caption">
                   <h5 class="portfolio-title">Guessing Game</h5>
                   <div class="portfolio-subtitle font-serif">
-                    A Basic Javascript guessing game
+                    HTML, CSS, JavaScript
                   </div>
                 </div>
                 <a
@@ -222,7 +222,7 @@
                 <div class="portfolio-caption">
                   <h5 class="portfolio-title">Gem Mining</h5>
                   <div class="portfolio-subtitle font-serif">
-                    A simple jQuery numbers game
+                    HTML, CSS, JavaScript, jQuery
                   </div>
                 </div>
                 <a
@@ -238,7 +238,7 @@
                 <div class="portfolio-caption">
                   <h5 class="portfolio-title">Trivia Game</h5>
                   <div class="portfolio-subtitle font-serif">
-                    A jQuery quiz game
+                    HTML, jQuery, Timers
                   </div>
                 </div>
                 <a
@@ -254,7 +254,7 @@
                 <div class="portfolio-caption">
                   <h5 class="portfolio-title">Gif Generator</h5>
                   <div class="portfolio-subtitle font-serif">
-                    A gif API scraper
+                    API, JSON, Ajax
                   </div>
                 </div>
                 <a
@@ -270,7 +270,7 @@
                 <div class="portfolio-caption">
                   <h5 class="portfolio-title">Firebase Train Scheduler</h5>
                   <div class="portfolio-subtitle font-serif">
-                    A Firebase train scheduler
+                    Firebase, HTML, Javascript
                   </div>
                 </div>
                 <a
@@ -286,7 +286,7 @@
                 <div class="portfolio-caption">
                   <h5 class="portfolio-title">Burger Time</h5>
                   <div class="portfolio-subtitle font-serif">
-                    A Fullstack burger app
+                    Mongo, Express, Node
                   </div>
                 </div>
                 <a
@@ -302,7 +302,7 @@
                 <div class="portfolio-caption">
                   <h5 class="portfolio-title">React Shuffle</h5>
                   <div class="portfolio-subtitle font-serif">
-                    A shuffle game using React
+                    React
                   </div>
                 </div>
                 <a
@@ -318,7 +318,7 @@
                 <div class="portfolio-caption">
                   <h5 class="portfolio-title">NYT Article Scraper</h5>
                   <div class="portfolio-subtitle font-serif">
-                    A New York Times React scraper
+                    React, Mongoose, Cheerio
                   </div>
                 </div>
                 <a
@@ -334,7 +334,7 @@
                 <div class="portfolio-caption">
                   <h5 class="portfolio-title">DemoQuest</h5>
                   <div class="portfolio-subtitle font-serif">
-                    A Fullstack text adventure game
+                    Mongoose, Express, React, Node
                   </div>
                 </div>
                 <a
