added curiouscat link

--- a/home.html
+++ b/home.html
@@ -377,6 +377,11 @@
                       >www.linkedin.com/in/patrickjfinnigan</a
                     >
                     <br />
+                    CuriousCat:
+                    <a href="https://curiouscat.me/patrickfinnigan94"
+                      >www.curiouscat.me/patrickfinnigan94</a
+                    >
+                    <br />
                   </div>
                 </aside>
               </div>
